# taskflow-api

./: .gitignore  README.md  manage.py  pyproject.toml
apps/boards/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/boards/migrations/: 0001_initial.py  0002_initial.py
apps/common/: models.py  permissions.py  responses.py
apps/media_files/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/media_files/migrations/: 0001_initial.py  0002_initial.py
apps/notifications/: admin.py  consumers.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  0002_initial.py
apps/reports/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/reports/migrations/: 0001_initial.py  0002_initial.py
apps/schedules/: admin.py  calendar_urls.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/schedules/migrations/: 0001_initial.py  0002_initial.py
apps/todos/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/todos/migrations/: 0001_initial.py  0002_initial.py
apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_biometricchallenge_biometriccredential.py
apps/work_requests/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/work_requests/migrations/: 0001_initial.py
config/: asgi.py  celery.py  routing.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  local.py  prod.py  test.py
